@@ -1,3 +1,9 @@
+2005-02-17  Dan Winship  <danw@novell.com>
+
+	* stetic/Stetic.cs: Put all of the windows into a single notebook.
+	Probably not the best layout, but I'm getting sick of the multiple
+	windows...
+
 2005-02-16  Dan Winship  <danw@novell.com>
 
 	* stetic/Grid.cs (Connect): static method to connect multiple
